Fix callout grid alignment

--- a/widgets/notifications/notifications.scss
+++ b/widgets/notifications/notifications.scss
@@ -1,12 +1,12 @@
 .callout {
   display: grid;
-  grid-template-areas: 'icon auto' 'icon body';
+  grid-template-areas: 'icon header' 'icon body';
   grid-template-columns: min-content 1fr;
   border-left: 0.25rem solid var(--accent-color);
   padding: 0.125rem 0;
   padding-left: 0.75rem;
   margin-bottom: 0.5rem;
-  column-gap: 0.25rem;
+  column-gap: 0.5rem;
 }
 
 .callout-icon {
